...
  "discardChangesConfirm": "Discard Changes",
  "importing": "Importing...",
  "nContacts_one": "{{count}} contact",
  "nContacts_other": "{{count}} contacts",
  "nLocations_one": "{{count}} location",
  "nLocations_other": "{{count}} locations",
  "emergencyNumber": "911",
  "saveFailed": "Failed to save. Please try again.",
  "copied": "Copied",
  "notNow": "Not Now",
  "openSettings": "Open Settings",
  "notFound": {
    "screenTitle": "Oops!",
...
